show warning if employee shifts are conflicting

--- a/client/src/components/Scheduling/ShiftWeekTable/Section/Row/Card/shift-week-table-card.scss
+++ b/client/src/components/Scheduling/ShiftWeekTable/Section/Row/Card/shift-week-table-card.scss
@@ -45,6 +45,12 @@
     float: right;
     color: $staffjoy-palette-logo-grey;
     font-size: 8px;
+
+    .error-button {
+      color: red;
+      font-size: 12px;
+      margin-left: 1px;
+    }
   }
 
   .shift-z-axis {
