show tooltip on hover over conflicted shifts

--- a/client/src/components/Scheduling/ShiftWeekTable/Section/Row/Card/shift-week-table-card.scss
+++ b/client/src/components/Scheduling/ShiftWeekTable/Section/Row/Card/shift-week-table-card.scss
@@ -47,9 +47,11 @@
     font-size: 8px;
 
     .error-button {
-      color: red;
-      font-size: 12px;
-      margin-left: 1px;
+      i {
+        color: red;
+        font-size: 12px;
+        margin-left: 1px;
+      }
     }
   }
 
